--- a/src/app/races/races.component.html
+++ b/src/app/races/races.component.html
@@ -1,7 +1,5 @@
 @for (race of races; track race.id) {
-  <div>
-    <h2>{{ race?.name }}</h2>
-  </div>
+  <pr-race [raceModel]="race"></pr-race>
 } @empty {
   <span>Empty list of races</span>
 }
