feat: add solution

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -62,7 +62,7 @@
   </div>
   <div class="mb-3">
     <label for="birthYear" class="form-label">Birth year</label>
-    <pr-birth-year-input id="birthYear" [inputId]="1" class="form-control" formControlName="birthYear" />
+    <pr-birth-year-input [inputId]="'birth-year'" formControlName="birthYear" />
     <!-- error message here -->
     <div
       id="birth-year-required-error"
