--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,6 +21,11 @@
               {{ user.money }}
             </span>
           </li>
+          <li class="nav-item">
+            <a id="logout-link" role="button" class="nav-link" (click)="logout($event)">
+              <span class="fa fa-power-off"></span>
+            </a>
+          </li>
         </ul>
       }
     </div>
