--- a/src/app/bet/bet.component.html
+++ b/src/app/bet/bet.component.html
@@ -1,17 +1,18 @@
-@if (raceModel) {
-  @if (betFailed) {
-    <div class="alert alert-danger mb-3">
-      <button type="button" class="btn-close" aria-label="Close" (click)="betFailed = false"></button>
+@if (raceModel(); as raceModel) {
+  @if (betFailed()) {
+    <div class="alert alert-danger alert-dismissible mb-3">
+      <button type="button" class="btn-close" aria-label="Close" (click)="betFailed.set(false)"></button>
       The race is already started or finished
     </div>
   }
   <h1>{{ raceModel.name }}</h1>
   <p>{{ raceModel.startInstant | fromNow }}</p>
+  <a class="btn btn-primary" [routerLink]="['/races', raceModel.id, 'live']">Watch live!</a>
   <div class="py-2">Click to bet on your favorite pony</div>
   <div class="row">
     @for (pony of raceModel.ponies; track pony.id) {
       <div class="col-12 col-md-2" [class.selected]="isPonySelected(pony)">
-        <pr-pony [ponyModel]="pony" (ponyClicked)="betOnPony(pony)"></pr-pony>
+        <pr-pony [ponyModel]="pony" (ponyClicked)="betOnPony(pony)" />
       </div>
     }
   </div>
